--- a/test/integration/k8s/manifests/05-uninstrumented-daemonset.yml
+++ b/test/integration/k8s/manifests/05-uninstrumented-daemonset.yml
@@ -27,6 +27,7 @@ spec:
         app: dsservice
       annotations:
         resource.opentelemetry.io/deployment.environment: 'integration-test'
+        resource.opentelemetry.io/service.version: '3.2.1'
     spec:
       containers:
         - name: dsservice
