--- a/test/integration/k8s/manifests/06-instrumented-client.template.yml
+++ b/test/integration/k8s/manifests/06-instrumented-client.template.yml
@@ -23,6 +23,7 @@ metadata:
     teardown: delete
   annotations:
     resource.opentelemetry.io/deployment.environment: 'integration-test'
+    resource.opentelemetry.io/service.version: '3.2.1'
 spec:
   shareProcessNamespace: true
   serviceAccountName: beyla
