--- a/test/integration/k8s/manifests/05-uninstrumented-server-client-different-nodes.yml
+++ b/test/integration/k8s/manifests/05-uninstrumented-server-client-different-nodes.yml
@@ -38,7 +38,7 @@ spec:
         - name: TARGET_URL
           value: "http://otherinstance:8080"
         - name: OTEL_RESOURCE_ATTRIBUTES
-          value: "deployment.environment=integration-test"
+          value: "deployment.environment=integration-test,service.version=3.2.1"
 ---
 apiVersion: v1
 kind: Service
@@ -113,4 +113,4 @@ spec:
             - name: LOG_LEVEL
               value: "DEBUG"
             - name: OTEL_RESOURCE_ATTRIBUTES
-              value: "deployment.environment=integration-test"
+              value: "deployment.environment=integration-test,service.version=3.2.1"
