--- a/.github/workflows/pull_request_integration_tests.yml
+++ b/.github/workflows/pull_request_integration_tests.yml
@@ -1,17 +1,15 @@
 name: Pull request integration tests
 
 on:
-  workflow_run:
-    workflows:
-      - Build and Commit eBPF Binaries
-    types:
-      - completed
+  push:
+    branches: [ 'main', 'release-*' ]
+  pull_request:
+    branches: [ 'main', 'release-*' ]
 
 jobs:
   test:
     name: test
     runs-on: ubuntu-latest-8-cores
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     strategy:
       matrix:
         go: [ '1.23' ]
