--- a/.github/workflows/beyla_build.yml
+++ b/.github/workflows/beyla_build.yml
@@ -28,9 +28,9 @@ jobs:
 
           if echo "$LAST_COMMIT_MESSAGE" | grep -q '\[do-not-rebuild\]'
           then
-            echo "::set-output name=should_build::false"
+            echo "should_build=false" >> $GITHUB_OUTPUT
           else
-            echo "::set-output name=should_build::true"
+            echo "should_build=true" >> $GITHUB_OUTPUT
           fi
 
       - name: Compile eBPF Programs
@@ -52,7 +52,7 @@ jobs:
           git add -u
           git commit -m "CI: Auto-build eBPF binaries[do-not-rebuild]" || exit 0
           git push
-          echo "::set-output name=should_test::false"
+          echo "should_test=false" >> $GITHUB_OUTPUT
 
   run-integration-tests:
     name: Pull request integration tests
