--- a/.github/workflows/pull_request_integration_tests_arm.yml
+++ b/.github/workflows/pull_request_integration_tests_arm.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: Test Logs
+          name: Integration Test Logs (ARM)
           path: |
             testoutput/*.log
             testoutput/kind
