--- a/.github/workflows/workflow_integration_tests_vm.yml
+++ b/.github/workflows/workflow_integration_tests_vm.yml
@@ -43,7 +43,7 @@ jobs:
         uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: Test Logs
+          name: Test Logs $${{ inputs.arch }}-${{ inputs.kernel-version }}
           path: |
             testoutput/*.log
             testoutput/kind
