--- a/test/integration/docker-compose-java-agent.yml
+++ b/test/integration/docker-compose-java-agent.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   testserver:
-    image: ghcr.io/grafana/beyla-test/greeting-java${JAVA_TEST_MODE}/0.0.1
+    image: ghcr.io/grafana/beyla-test/greeting-java-jar/0.0.1
     ports:
       - "8086:8085"
     environment:
@@ -25,16 +25,14 @@ services:
     image: hatest-javaautoinstrumenter
     privileged: true # in some environments (not GH Pull Requests) you can set it to false and then cap_add: [ SYS_ADMIN ]
     network_mode: "service:testserver"
-    pid: "host"
+    pid: "service:testserver"
     environment:
       GOCOVERDIR: "/coverage"
       BEYLA_TRACE_PRINTER: "text"
-      BEYLA_OPEN_PORT: "${JAVA_OPEN_PORT}"
-      BEYLA_EXECUTABLE_NAME: "${JAVA_EXECUTABLE_NAME}"
-      BEYLA_SYSTEM_WIDE: "${BEYLA_SYSTEM_WIDE}"
+      BEYLA_OPEN_PORT: "8085"
       OTEL_SERVICE_NAME: "${OTEL_SERVICE_NAME}"
       BEYLA_SERVICE_NAMESPACE: "integration-test"
-      BEYLA_METRICS_INTERVAL: "10ms"
+      OTEL_METRIC_EXPORT_INTERVAL: "10"
       BEYLA_BPF_BATCH_TIMEOUT: "10ms"
       BEYLA_LOG_LEVEL: "DEBUG"
       BEYLA_BPF_DEBUG: "TRUE"
