--- a/test/integration/configs/instrumenter-config-promscrape.yml
+++ b/test/integration/configs/instrumenter-config-promscrape.yml
@@ -7,6 +7,7 @@ prometheus_export:
   features:
     - application
     - application_process
+  extra_resource_attributes: ["deployment_environment"]
 attributes:
   select:
     process_cpu_utilization:
