--- a/.github/workflows/port-to-upstream.yml
+++ b/.github/workflows/port-to-upstream.yml
@@ -1,12 +1,10 @@
 name: Port PRs to Upstream OTel eBPF Instrumentation
 
-on:
-  # Run immediately on all PRs and pushes
-  push:
-  pull_request:
+# Simple trigger to run on every push or PR action
+on: [push, pull_request]
 
 permissions:
-  contents: read
+  contents: write
   id-token: write
   pull-requests: write
 
@@ -14,6 +12,12 @@ jobs:
   port-to-upstream:
     runs-on: ubuntu-latest
     steps:
+      - name: Debug event
+        run: |
+          echo "Event name: ${{ github.event_name }}"
+          echo "Event path: ${{ github.event_path }}"
+          echo "Ref: ${{ github.ref }}"
+          
       - name: Get secrets from Vault
         id: get-secrets
         uses: grafana/shared-workflows/actions/get-vault-secrets@main
@@ -51,99 +55,66 @@ jobs:
           token: ${{ steps.app-token.outputs.token }}
           path: opentelemetry-ebpf-instrumentation
           
-      - name: Process PRs with port-to-otel-ebpf-inst label
+      - name: Process labeled PRs
         env:
           GH_TOKEN: ${{ steps.app-token.outputs.token }}
         run: |
-          # Find all PRs with the port-to-otel-ebpf-inst label
-          echo "Finding PRs with port-to-otel-ebpf-inst label..."
+          echo "Running PR processing..."
+          
+          # Find labeled PRs
           LABELED_PRS=$(gh pr list --repo grafana/beyla --label "port-to-otel-ebpf-inst" --json number,title,url,baseRefName,headRefName,state --limit 100)
+          echo "Found PRs: $LABELED_PRS"
           
-          # Exit if no PRs found
-          if [ -z "$LABELED_PRS" ] || [ "$LABELED_PRS" == "[]" ]; then
-            echo "No PRs found with port-to-otel-ebpf-inst label."
-            exit 0
-          fi
-          
-          # Process each PR
+          # Process each labeled PR
           echo "$LABELED_PRS" | jq -c '.[]' | while read -r PR_JSON; do
             PR_NUM=$(echo "$PR_JSON" | jq -r '.number')
             PR_TITLE=$(echo "$PR_JSON" | jq -r '.title')
             PR_URL=$(echo "$PR_JSON" | jq -r '.url')
             PR_BASE_BRANCH=$(echo "$PR_JSON" | jq -r '.baseRefName')
-            PR_HEAD_BRANCH=$(echo "$PR_JSON" | jq -r '.headRefName')
-            PR_STATE=$(echo "$PR_JSON" | jq -r '.state')
             
-            echo "================================================================"
             echo "Processing PR #${PR_NUM}: ${PR_TITLE}"
-            echo "================================================================"
             
-            # Skip closed PRs
-            if [ "$PR_STATE" == "CLOSED" ]; then
-              echo "PR is closed. Skipping."
+            # Try fetching the PR branch
+            git fetch origin pull/${PR_NUM}/head:pr-${PR_NUM} || {
+              echo "Failed to fetch PR #${PR_NUM}. Continuing with next PR."
               continue
-            fi
+            }
             
-            # Branch name in target repo
-            BRANCH_NAME="port/${PR_NUM}-to-upstream"
-            
-            # Try to fetch the PR branch
-            if ! git fetch origin pull/${PR_NUM}/head:pr-${PR_NUM} 2>/dev/null; then
-              echo "Could not fetch PR branch. Skipping."
-              continue
-            fi
-            
-            # Checkout the PR branch
             git checkout pr-${PR_NUM}
             
-            # Get the base and head SHAs
+            # Get base/head SHAs
             BASE_SHA=$(git merge-base origin/${PR_BASE_BRANCH} pr-${PR_NUM})
             HEAD_SHA=$(git rev-parse HEAD)
             
-            # Get changed files excluding vendor and license files
+            # Get changed files (excluding vendor/licenses)
             CHANGED_FILES=$(git diff --name-only ${BASE_SHA} ${HEAD_SHA} | grep -v "vendor/" | grep -v "LICENSE" | grep -v "third_party_licenses.csv" || echo "")
             
-            # Check if there are any relevant files to port
             if [ -z "${CHANGED_FILES}" ]; then
-              echo "No relevant files to port. Skipping."
+              echo "No relevant files in PR #${PR_NUM}. Skipping."
               continue
             fi
             
-            # Create a patch
+            # Create patch
             git diff ${BASE_SHA} ${HEAD_SHA} -- ${CHANGED_FILES} > pr-${PR_NUM}.patch
             
-            # Go to target repository and create/reset branch
+            # Process in target repo
             cd opentelemetry-ebpf-instrumentation
             
-            # Create or checkout branch
+            # Create branch
+            BRANCH_NAME="port/${PR_NUM}-to-upstream"
             git checkout -b ${BRANCH_NAME} 2>/dev/null || git checkout ${BRANCH_NAME}
             git reset --hard origin/main
             
-            # Apply patch with reject files
+            # Apply patch with rejects
             git apply --whitespace=fix --reject ../pr-${PR_NUM}.patch || true
             
-            # Keep reject files for manual application
-            # Add them to the commit so they're available in the branch
-            
-            # Commit and push if there are changes
+            # Commit and push changes
             if ! git diff --quiet || ! git diff --staged --quiet || [ -n "$(find . -name '*.rej')" ]; then
-              # Add all changes including .rej files
               git add .
-              
-              # Check if we have any reject files
-              if [ -n "$(find . -name '*.rej')" ]; then
-                REJECT_MESSAGE="
-
-Some changes couldn't be automatically applied and have been saved as .rej files.
-These files are included in this branch for manual application."
-              else
-                REJECT_MESSAGE=""
-              fi
-              
               git commit -m "[port] #${PR_NUM}: ${PR_TITLE}
               
-Automated port of #${PR_NUM} from grafana/beyla.
-Original PR: ${PR_URL}${REJECT_MESSAGE}"
+              Automated port of #${PR_NUM} from grafana/beyla.
+              Original PR: ${PR_URL}"
               
               git push origin ${BRANCH_NAME} --force
               echo "Pushed branch ${BRANCH_NAME}"
@@ -151,8 +122,7 @@ Original PR: ${PR_URL}${REJECT_MESSAGE}"
               echo "No changes to commit for PR #${PR_NUM}"
             fi
             
-            # Go back to Beyla repository
             cd ..
           done
           
-          echo "Processing completed."
+          echo "All PRs processed."
