--- a/.github/workflows/port-to-upstream.yml
+++ b/.github/workflows/port-to-upstream.yml
@@ -61,33 +61,56 @@ jobs:
         run: |
           echo "Running PR processing..."
           
-          # Find labeled PRs
-          LABELED_PRS=$(gh pr list --repo grafana/beyla --label "port-to-otel-ebpf-inst" --json number,title,url,baseRefName,headRefName,state --limit 100)
-          echo "Found PRs: $LABELED_PRS"
+          # Find labeled PRs - use explicit output format to avoid parsing issues
+          LABELED_PRS=$(gh pr list --repo grafana/beyla --label "port-to-otel-ebpf-inst" --json number,title,url,baseRefName,state)
+          echo "Found labeled PRs JSON:"
+          echo "$LABELED_PRS" | jq '.'
           
-          # Process each labeled PR
-          echo "$LABELED_PRS" | jq -c '.[]' | while read -r PR_JSON; do
+          # Count the PRs found
+          PR_COUNT=$(echo "$LABELED_PRS" | jq length)
+          echo "Number of PRs to process: $PR_COUNT"
+          
+          # Process each labeled PR (with explicit iteration)
+          for i in $(seq 0 $((PR_COUNT-1))); do
+            PR_JSON=$(echo "$LABELED_PRS" | jq ".[$i]")
             PR_NUM=$(echo "$PR_JSON" | jq -r '.number')
             PR_TITLE=$(echo "$PR_JSON" | jq -r '.title')
             PR_URL=$(echo "$PR_JSON" | jq -r '.url')
             PR_BASE_BRANCH=$(echo "$PR_JSON" | jq -r '.baseRefName')
+            PR_STATE=$(echo "$PR_JSON" | jq -r '.state')
             
-            echo "Processing PR #${PR_NUM}: ${PR_TITLE}"
+            echo "================================================================"
+            echo "Processing PR #${PR_NUM}: ${PR_TITLE} (${PR_STATE})"
+            echo "================================================================"
+            
+            # Skip closed PRs
+            if [ "$PR_STATE" == "CLOSED" ]; then
+              echo "PR is closed. Skipping."
+              continue
+            fi
             
             # Try fetching the PR branch
-            git fetch origin pull/${PR_NUM}/head:pr-${PR_NUM} || {
+            echo "Fetching PR branch..."
+            if ! git fetch origin pull/${PR_NUM}/head:pr-${PR_NUM} 2>/dev/null; then
               echo "Failed to fetch PR #${PR_NUM}. Continuing with next PR."
               continue
-            }
+            fi
             
+            # Checkout the PR branch
             git checkout pr-${PR_NUM}
             
             # Get base/head SHAs
-            BASE_SHA=$(git merge-base origin/${PR_BASE_BRANCH} pr-${PR_NUM})
+            BASE_SHA=$(git merge-base origin/${PR_BASE_BRANCH} pr-${PR_NUM} 2>/dev/null || git merge-base origin/main pr-${PR_NUM})
             HEAD_SHA=$(git rev-parse HEAD)
+            
+            echo "Base SHA: $BASE_SHA"
+            echo "Head SHA: $HEAD_SHA"
             
             # Get changed files (excluding vendor/licenses and workflows)
             CHANGED_FILES=$(git diff --name-only ${BASE_SHA} ${HEAD_SHA} | grep -v "vendor/" | grep -v "LICENSE" | grep -v "third_party_licenses.csv" | grep -v "\.github/workflows/" || echo "")
+            
+            echo "Changed files:"
+            echo "$CHANGED_FILES"
             
             if [ -z "${CHANGED_FILES}" ]; then
               echo "No relevant files in PR #${PR_NUM}. Skipping."
@@ -102,10 +125,12 @@ jobs:
             
             # Create branch
             BRANCH_NAME="port/${PR_NUM}-to-upstream"
+            echo "Creating/checking out branch ${BRANCH_NAME}"
             git checkout -b ${BRANCH_NAME} 2>/dev/null || git checkout ${BRANCH_NAME}
             git reset --hard origin/main
             
             # Apply patch with rejects
+            echo "Applying patch..."
             git apply --whitespace=fix --reject ../pr-${PR_NUM}.patch || true
             
             # Remove workflow .rej files that would cause permission issues
@@ -113,6 +138,7 @@ jobs:
             
             # Commit and push changes
             if ! git diff --quiet || ! git diff --staged --quiet || [ -n "$(find . -name '*.rej')" ]; then
+              echo "Changes detected, committing..."
               git add .
               git commit -m "[port] #${PR_NUM}: ${PR_TITLE}
               
@@ -120,13 +146,16 @@ jobs:
               Original PR: ${PR_URL}"
               
               # Try to push, but continue even if it fails
+              echo "Pushing branch ${BRANCH_NAME}..."
               git push origin ${BRANCH_NAME} --force || {
                 echo "Failed to push branch ${BRANCH_NAME} for PR #${PR_NUM}. Continuing with next PR."
               }
+              echo "Branch ${BRANCH_NAME} pushed successfully"
             else
               echo "No changes to commit for PR #${PR_NUM}"
             fi
             
+            # Go back to Beyla repository
             cd ..
           done
           
