--- a/test/integration/configs/instrumenter-config-promscrape.yml
+++ b/test/integration/configs/instrumenter-config-promscrape.yml
@@ -31,3 +31,5 @@ attributes:
       include: ["*"]
   kubernetes:
     cluster_name: beyla-k8s-test-cluster
+  extra_group_attributes:
+    k8s_app_meta: ["component"]
