--- a/.github/workflows/workflow_integration_tests_vm.yml
+++ b/.github/workflows/workflow_integration_tests_vm.yml
@@ -18,6 +18,10 @@ on:
         default: 60
 jobs:
   test:
+    permissions:
+      contents: read
+      # required for CODECOV token
+      id-token: write
     name: test
     runs-on: ubuntu-latest
     strategy:
@@ -51,10 +55,14 @@ jobs:
           path: |
             testoutput/*.log
             testoutput/kind
+      - id: get-codecov-token
+        uses: grafana/shared-workflows/actions/get-vault-secrets@get-vault-secrets/v1.2.1
+        with:
+          # Secrets placed in the ci/repo/grafana/beyla/codecov path in Vault
+          repo_secrets: |
+            CODECOV_TOKEN=codecov:token
       - name: Report coverage
         uses: codecov/codecov-action@b9fd7d16f6d7d1b5d2bec1a2887e65ceed900238 # v4
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
         with:
           file: ./testoutput/itest-covdata.txt
           flags: integration-test-vm-${{ inputs.arch }}-${{ inputs.kernel-version }}
