--- a/.github/workflows/pull_request_integration_tests.yml
+++ b/.github/workflows/pull_request_integration_tests.yml
@@ -47,14 +47,14 @@ jobs:
           path: |
             testoutput/*.log
             testoutput/kind
-      - id: get-codecov-token
-        uses: grafana/shared-workflows/actions/get-vault-secrets@get-vault-secrets/v1.2.1
-        with:
-          # Secrets placed in the ci/repo/grafana/beyla/codecov path in Vault
-          repo_secrets: |
-            CODECOV_TOKEN=codecov:token
-      - name: Report coverage
-        uses: codecov/codecov-action@b9fd7d16f6d7d1b5d2bec1a2887e65ceed900238 # v4
-        with:
-          file: ./testoutput/itest-covdata.txt
-          flags: integration-test
+      # - id: get-codecov-token
+      #   uses: grafana/shared-workflows/actions/get-vault-secrets@get-vault-secrets/v1.2.1
+      #   with:
+      #     # Secrets placed in the ci/repo/grafana/beyla/codecov path in Vault
+      #     repo_secrets: |
+      #       CODECOV_TOKEN=codecov:token
+      # - name: Report coverage
+      #   uses: codecov/codecov-action@b9fd7d16f6d7d1b5d2bec1a2887e65ceed900238 # v4
+      #   with:
+      #     file: ./testoutput/itest-covdata.txt
+      #     flags: integration-test
