--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -36,12 +36,14 @@ jobs:
         run: make docker-generate verify cov-exclude-generated
       - id: get-codecov-token
         uses: grafana/shared-workflows/actions/get-vault-secrets@get-vault-secrets/v1.2.1
+        continue-on-error: true
         with:
           # Secrets placed in the ci/repo/grafana/beyla/codecov path in Vault
           repo_secrets: |
             CODECOV_TOKEN=codecov:token
       - name: Report coverage
         uses: codecov/codecov-action@b9fd7d16f6d7d1b5d2bec1a2887e65ceed900238 # v4
+        continue-on-error: true
         with:
           file: ./testoutput/cover.txt
           flags: unittests
