--- a/.github/workflows/pull_request_integration_tests_vm_5.15_x86_64.yml
+++ b/.github/workflows/pull_request_integration_tests_vm_5.15_x86_64.yml
@@ -11,6 +11,8 @@ on:
 # Set restrictive permissions at workflow level
 permissions:
   contents: read
+  # required for internal CODECOV token
+  id-token: write
 
 jobs:
   test:
