--- a/.github/workflows/workflow_integration_tests_vm.yml
+++ b/.github/workflows/workflow_integration_tests_vm.yml
@@ -37,7 +37,7 @@ jobs:
           sudo apt-get install -y --no-install-recommends qemu-utils qemu-system-x86
       - name: Run VM integration tests
         run: |
-          make docker-generate
+          make vendor-obi
           sudo make -C test/vm && [ -f testoutput/success ]
         env:
           KERNEL_VER: ${{ inputs.kernel-version }}
