--- a/internal/test/integration/docker-compose-go-otel-grpc.yml
+++ b/internal/test/integration/docker-compose-go-otel-grpc.yml
@@ -31,7 +31,7 @@ services:
       GOCOVERDIR: "/coverage"
       BEYLA_TRACE_PRINTER: "text"
       BEYLA_OPEN_PORT: "${BEYLA_OPEN_PORT}"
-      BEYLA_METRICS_FEATURES: "application,application_span,application_process"
+      BEYLA_OTEL_METRICS_FEATURES: "application,application_span,application_process"
       BEYLA_PROMETHEUS_FEATURES: "application,application_span,application_process"
       BEYLA_DISCOVERY_POLL_INTERVAL: 500ms
       BEYLA_EXECUTABLE_NAME: "${BEYLA_EXECUTABLE_NAME}"
