--- a/.github/workflows/obi-drift-check.yml
+++ b/.github/workflows/obi-drift-check.yml
@@ -5,10 +5,14 @@ on:
     branches: ["main", "release-*"]
     paths:
       - ".obi-src"
+      - "internal/test/integration/**"
+      - "scripts/check-obi-drift.sh"
   pull_request:
     branches: ["main", "release-*"]
     paths:
       - ".obi-src"
+      - "internal/test/integration/**"
+      - "scripts/check-obi-drift.sh"
   workflow_dispatch:
 
 # Set restrictive permissions at workflow level
